@@ -1230,12 +1230,30 @@ function api_device_save($id, $device_template_id, $description, $hostname, $snm
 	}
 
 	if ($device_id > 0) {
-		if (read_config_option('extended_paths') == 'on') {
-			$host_dir = CACTI_PATH_RRA . '/' . $device_id;
+		if (read_config_option('extended_paths') == 'on'){
+			$pattern  = read_config_option('extended_paths_type');
+			$maxdirs  = read_config_option('extended_paths_hashes');
+   			if (empty($maxdirs) || $maxdirs < 0 || !is_numeric($maxdirs)) {
+				$maxdirs = 100;
+			}
 
-			if (!is_dir($host_dir)) {
-				if (is_writable(CACTI_PATH_RRA)) {
-					if (mkdir($host_dir, 0775)) {
+			$hash_id = $device_id % $maxdirs;
+
+			if ($pattern == 'device' || $pattern == '') {
+				$host_dir = $config['rra_path'] . "/$device_id";
+			} elseif ($pattern == 'device_dq') {
+				$host_dir = $config['rra_path'] . "/$device_id";
+			} elseif ($pattern == 'hash_device') {
+				$host_dir = $config['rra_path'] . "/$hash_id/$device_id";
+			} elseif ($pattern == 'hash_device_dq') {
+				$host_dir = $config['rra_path'] . "/$hash_id/$device_id";
+			} else {
+				$host_dir = $config['rra_path'] . "/$device_id";
+			}
+
+			if (!is_dir($host_dir)){
+				if (is_writable($config['rra_path'])) {
+					if (mkdir($host_dir, 0775, true)) {
 						if ($config['cacti_server_os'] != 'win32') {
 							$owner_id      = fileowner(CACTI_PATH_RRA);
 							$group_id      = filegroup(CACTI_PATH_RRA);
